1d/alert-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: alert
  template:
    metadata:
      labels:
        component: alert
    spec:
      containers:
        - name: alert
          image: ccuni/alert-service-2020w
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: alert
spec:
  type: ClusterIP
  selector:
    component: alert
  ports:
    - port: 80
      targetPort: 80
