1d/cpanel-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpanel-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cpanel
  template:
    metadata:
      labels:
        component: cpanel
    spec:
      containers:
        - name: cpanel
          image: a1303858/cpanel
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cpanel
spec:
  type: ClusterIP
  selector:
    component: cpanel
  ports:
    - port: 80
      targetPort: 80
