1d/section-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: section-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: section
  template:
    metadata:
      labels:
        component: section
    spec:
      containers:
        - name: section
          image: ccuni/section-service-2020w
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: section
spec:
  type: ClusterIP
  selector:
    component: section
  ports:
    - port: 80
      targetPort: 80
